--- a/TranspoLink/Views/Admin/Index.cshtml
+++ b/TranspoLink/Views/Admin/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Booking>
 
 @{
-    ViewBag.Title += " |Admin Dashboard";
+    ViewBag.Title += " | Admin Dashboard";
 }
 
 @section head{
-    <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="stylesheet" href="/css/admin.css" asp-append-version="true"/>
 }
 <div class="admin-container">
     <div class="admin-header">
