--- a/TranspoLink/Views/Account/Login.cshtml
+++ b/TranspoLink/Views/Account/Login.cshtml
@@ -6,6 +6,7 @@
 @section head {
     <link rel="stylesheet" href="/css/login.css" />
     <script src="/js/regNlog.js" defer></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 }
 
 <div class="auth-container">
@@ -66,6 +67,10 @@
                 <a href="/Account/ResetPassword" class="auth-link">Forgot password?</a>
             </div>
 
+            <div class="g-recaptcha"
+                 data-sitekey="6Ld3iBosAAAAAHOjrhAT_ufqDtdaUHcKIYH94G4-"
+                 style="margin-bottom: 15px; display: flex; justify-content: center;">
+            </div>
             <button type="submit" class="auth-submit-btn">Log In</button>
 
             <div class="auth-divider"><span>or log in with</span></div>
