--- a/TranspoLink/Views/Account/ResetPassword.cshtml
+++ b/TranspoLink/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ResetPasswordFinalVM
 @{
-    ViewBag.Title = "Account | Reset Password";
+    ViewBag.Title += " | Reset Password";
 }
 
 @section head {
