--- a/TranspoLink/Views/Account/Login.cshtml
+++ b/TranspoLink/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="/css/login.css" />
+    <link rel="stylesheet" href="/css/login.css" asp-append-version="true" />
     <script src="/js/regNlog.js" defer></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 }
